--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "my-fullstack-project",
   "version": "1.0.0",
+  "homepage": "https://username.github.io/todolist-app",
   "scripts": {
     "client": "npm start --prefix client",
     "server": "nodemon server/src/index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "gh-pages": "^6.1.1",
     "nodemon": "^3.1.4"
   },
   "dependencies": {
