--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://username.github.io/todolist-app",
+  "homepage": "https://muneo1008.github.io/todolist-app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
